# OOP

./: CMakeLists.txt  labsf.cpp
OOP_6/include/: Character.h  Factory.h  Observer.h  Visitor.h  World.h
OOP_6/src/: CMakeLists.txt  main.cpp
OOP_6/test/: test_lab.cc
OOP_7/: CMakeLists.txt
OOP_7/include/: CMakeLists.txt  Character.h  Factory.h  Observer.h  Visitor.h  World.h
OOP_7/src/: CMakeLists.txt  main.cpp
OOP_7/test/: CMakeLists.txt  test_lab.cc
lab5/: CMakeLists.txt
lab5/include/: CMakeLists.txt  custom_memory_resource.cpp  custom_memory_resource.h  my_struct.cpp  my_struct.h  pmr_list.cpp  pmr_list.h
lab5/src/: main.cpp
lab5/test/: CMakeLists.txt  test_lab.cc
lab_1/: CMakeLists.txt  labsf.cpp  labsf.h  main_program.cpp  test_labsf.cpp
lab_2/: CMakeLists.txt  four.cpp  four.h  main_program.cpp  test_four.cpp
lab_3 & lab_4/: CMakeLists.txt  figure.h  main_program.cpp  rhombus.cpp  test_figures.cpp
lab_4/: pentagon.cpp  pentagon.h  rhombus.h  trapezoid.cpp  trapezoid.h
lab_6/: CMakeLists.txt
lab_6/include/: CMakeLists.txt  Character.h  Factory.h  Observer.h  Visitor.h  World.h
lab_6/src/: main.cpp
lab_6/test/: CMakeLists.txt  test.cc
